tests/ui/g-route-nested-policy-not-promoted.stderr
error[E0080]: evaluation panicked: Program::policy must annotate the controller self-send that opens each route/loop arm
 --> src/g.rs
  |
  |           let image = CompiledProgramImage::scan_const_with_lookup(
  |  _____________________^
  | |             source,
  | |             ProgramSourceLookup::new(Self::source_policy_at, Self::source_control_desc_at),
  | |         );
  | |_________^ evaluation of `hibana::g::ProjectedChoreography::<hibana::g::Route<hibana::g::Seq<hibana::g::Policy<hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<0>, hibana::g::Msg<161, (), hibana::integration::cap::control::LoopContinueKind>>, 10>, hibana::g::Route<hibana::g::Policy<hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<0>, hibana::g::Msg<161, (), hibana::integration::cap::control::LoopContinueKind>>, 10>, hibana::g::Policy<hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<0>, hibana::g::Msg<162, (), hibana::integration::cap::control::LoopBreakKind>>, 10>>>, hibana::g::Policy<hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<0>, hibana::g::Msg<162, (), hibana::integration::cap::control::LoopBreakKind>>, 10>>>::PROGRAM_IMAGE` failed inside this call
  |
note: inside `hibana::global::compiled::lowering::driver::impls::image::<impl hibana::global::compiled::lowering::driver::CompiledProgramImage>::scan_const_with_lookup`
 --> src/global/compiled/lowering/driver/impls/image.rs
  |
  |         Self::scan_impl(eff_list, source_lookup)
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::compiled::lowering::driver::impls::image::<impl hibana::global::compiled::lowering::driver::CompiledProgramImage>::scan_impl`
 --> src/global/compiled/lowering/driver/impls/image.rs
  |
  |         Self::scan_into(&mut summary, eff_list);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::compiled::lowering::driver::impls::image::<impl hibana::global::compiled::lowering::driver::CompiledProgramImage>::scan_into`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/global/compiled/lowering/driver/impls/image.rs
  |
  | / ...                   panic!(
  | | ...                       "Program::policy must annotate the controller self-send that opens each route/loop arm"
  | | ...                   );
  | |_______________________- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  |     &ProjectedChoreography::<Steps>::PROGRAM_IMAGE
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |                 Self::STAMP,
  |                 ^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |     RoleProgram::new(&ValidatedRoleImage::<Steps, ROLE>::COMPILED_IMAGE)
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |     RoleProgram::new(&ValidatedRoleImage::<Steps, ROLE>::COMPILED_IMAGE)
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn hibana::global::role_program::program::project_choreography_role::<0, hibana::g::Route<Seq<hibana::g::Policy<hibana::g::Send<Role<0>, Role<0>, Msg<161, (), LoopContinueKind>>, 10>, hibana::g::Route<hibana::g::Policy<hibana::g::Send<Role<0>, Role<0>, Msg<161, (), LoopContinueKind>>, 10>, hibana::g::Policy<hibana::g::Send<Role<0>, Role<0>, Msg<162, (), LoopBreakKind>>, 10>>>, hibana::g::Policy<hibana::g::Send<Role<0>, Role<0>, Msg<162, (), LoopBreakKind>>, 10>>>`
 --> src/global/role_program/program.rs
  |
  |         project_choreography_role(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
